[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
lexer = { path = "../ilo/lexer" }
parser = { path = "../ilo/parser" }
interpreter = { path = "../ilo/interpreter" }